<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/mnu_empresausuario"
        android:menuCategory="system"
        android:title="@string/EmpresaUsuario"
        app:itemTextAppearance="@style/TextAppearance.AppCompat.Display1" />
    <item
        android:id="@+id/mnu_LoginAdmin"
        android:title="@string/LoginAdmin"
        app:itemTextAppearance="@style/TextAppearance.AppCompat.Small" />
    <item
        android:id="@+id/mnu_LoginUsuario"
        android:title="@string/LoginUsuario"
        app:itemTextAppearance="@style/TextAppearance.AppCompat.Small" />
    <item
        android:id="@+id/mnu_MaestroCita"
        android:title="@string/MaestroCita"
        app:itemTextAppearance="@style/TextAppearance.AppCompat.Small" />
    <item
        android:id="@+id/mnu_MarcaModelo"
        android:title="@string/MarcaModelo"
        app:itemTextAppearance="@style/MenuItems"/>
    <item
        android:id="@+id/mnu_Sede"
        android:title="@string/Sede" />
    <item
        android:id="@+id/mnu_SedeHorario"
        android:title="@string/SedeHorario" />
    <item
        android:id="@+id/mnu_asesor"
        android:title="@string/Asesor" />
    <item
        android:id="@+id/mnu_Empresa"
        android:title="@string/Empresa"></item>
    <item
        android:id="@+id/mnu_Vehiculo"
        android:title="@string/Vehiculo" />
    <item
        android:id="@+id/mnu_CitaBuscar"
        android:title="@string/CitaBuscar" />
    <item
        android:id="@+id/mnu_Cita"
        android:title="@string/Cita" />
    <item
        android:id="@+id/mnu_Historia"
        android:title="Historia" />
</menu>