<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Empresa">

    <EditText
        android:id="@+id/nombre15"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/token"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre14" />

    <EditText
        android:id="@+id/nombre14"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/url"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <EditText
        android:id="@+id/nit8"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/Identificacion"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <Button
        android:id="@+id/button9"
        android:layout_width="128dp"
        android:layout_height="42dp"
        android:text="@string/actualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre13" />

    <EditText
        android:id="@+id/nombre11"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/tel2"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail4" />

    <EditText
        android:id="@+id/nombre13"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/contacto"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre11" />

    <Button
        android:id="@+id/button10"
        android:layout_width="128dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:text="@string/borrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="54dp"
        android:layout_height="56dp"
        android:contentDescription="@string/Cita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_rojo_blanco" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="167dp"
        android:layout_height="64dp"
        android:contentDescription="@string/LoginUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_carempresa" />

    <EditText
        android:id="@+id/nombre12"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre10" />

    <EditText
        android:id="@+id/nombre10"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/razon"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nit8" />

    <EditText
        android:id="@+id/mail4"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/tel1"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre12" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="99dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:text="@string/activo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre13" />
</androidx.constraintlayout.widget.ConstraintLayout>