<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sede">

    <Switch
        android:id="@+id/switch4"
        android:layout_width="156dp"
        android:layout_height="26dp"
        android:layoutDirection="rtl"
        android:text="@string/RTM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="128dp"
        android:layout_height="42dp"
        android:text="@string/actualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nit7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="128dp"
        android:layout_height="42dp"
        android:text="@string/borrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <EditText
        android:id="@+id/nit7"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/dirsede"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/nit6"
        app:layout_constraintTop_toBottomOf="@+id/nit6" />

    <EditText
        android:id="@+id/nit4"
        android:layout_width="351dp"
        android:layout_height="36dp"
        android:ems="10"
        android:hint="@string/emp"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/nit3"
        app:layout_constraintTop_toBottomOf="@+id/nit3" />

    <EditText
        android:id="@+id/nit3"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/idempresa"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <EditText
        android:id="@+id/nit5"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/codsede"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/nit4"
        app:layout_constraintTop_toBottomOf="@+id/nit4" />

    <EditText
        android:id="@+id/nit6"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/nombresede"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/nit5"
        app:layout_constraintTop_toBottomOf="@+id/nit5" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="54dp"
        android:layout_height="56dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/Cita"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_rojo_blanco" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="64dp"
        android:layout_height="56dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/LoginUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_sede" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="148dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"
        android:layoutDirection="rtl"
        android:text="@string/mantto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nit7" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="161dp"
        android:layout_height="26dp"
        android:layout_marginTop="2dp"
        android:layoutDirection="rtl"
        android:text="@string/express"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="156dp"
        android:layout_height="26dp"
        android:layoutDirection="rtl"
        android:text="@string/lavado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="350dp"
        android:layout_height="183dp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="383dp" />

</androidx.constraintlayout.widget.ConstraintLayout>