<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:paddingLeft="10dp"
    tools:context=".Asesor">

    <EditText
        android:id="@+id/idtxtid"
        android:layout_width="183dp"
        android:layout_height="35dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:theme="@style/fontssicita"
        app:layout_constraintEnd_toStartOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/idswelectrogeneral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ET"
        android:layoutDirection="rtl"
        app:layout_constraintEnd_toEndOf="@+id/idswelectroespecial"
        app:layout_constraintTop_toBottomOf="@+id/idswelectroespecial" />

    <Switch
        android:id="@+id/idswpintura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/P"
        android:layoutDirection="rtl"
        app:layout_constraintEnd_toEndOf="@+id/idswmg"
        app:layout_constraintTop_toBottomOf="@+id/idswmg" />

    <Switch
        android:id="@+id/idswlatoneria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/L"
        android:layoutDirection="rtl"
        app:layout_constraintEnd_toEndOf="@+id/idswpintura"
        app:layout_constraintTop_toBottomOf="@+id/idswpintura" />

    <Switch
        android:id="@+id/idswmg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/MG"
        android:layoutDirection="rtl"
        android:onClick="Actualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idtxtemail" />

    <Switch
        android:id="@+id/idswelectroespecial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/EE"
        android:layoutDirection="rtl"
        app:layout_constraintEnd_toEndOf="@+id/idswlatoneria"
        app:layout_constraintTop_toBottomOf="@+id/idswlatoneria" />

    <EditText
        android:id="@+id/idtxtidentificacion"
        android:layout_width="242dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/Identificacion"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <EditText
        android:id="@+id/iditxttelefono"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/tel1"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idtxtnombre" />

    <EditText
        android:id="@+id/idtxtemail"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idtxtmovil" />

    <EditText
        android:id="@+id/idtxtnombre"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idtxtidentificacion" />

    <EditText
        android:id="@+id/idtxtmovil"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/movil"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iditxttelefono" />

    <Button
        android:id="@+id/idbtnActualizar"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:onClick="Actualizar"
        android:text="@string/actualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idtxtemail" />

    <Button
        android:id="@+id/idbtnborrar"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/borrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idbtnActualizar" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="54dp"
        android:layout_height="56dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/Cita"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_rojo_blanco" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="64dp"
        android:layout_height="56dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/LoginUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_tecnico" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>